Replace boxing constructors
Boxing constructors of primitive types are deprecated in newer versions
of Java and should not be used.